[gd_scene load_steps=9 format=3 uid="uid://vx0dqrnysh81"]

[ext_resource type="Script" path="res://[03] Scripts/laser.gd" id="1_yhflf"]
[ext_resource type="Material" uid="uid://ded1f2g5vlduk" path="res://[01] Assets/Textures/laser.tres" id="2_f8l36"]
[ext_resource type="AudioStream" uid="uid://ceuldodtv7ynk" path="res://[01] Assets/Audio/SFX/Gun/LasGun_tail_1.wav" id="3_npyr7"]

[sub_resource type="BoxMesh" id="BoxMesh_h4wgn"]
material = ExtResource("2_f8l36")

[sub_resource type="Animation" id="Animation_7ckwx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scaler/sizer3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(10, 10, 10)]
}

[sub_resource type="Animation" id="Animation_osp5e"]
resource_name = "grow"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scaler/sizer3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 10), Vector3(10, 10, 10)]
}

[sub_resource type="Animation" id="Animation_g5cmy"]
resource_name = "shrink"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Scaler/sizer3D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(10, 10, 10), Vector3(0, 0, 10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p1otm"]
_data = {
"RESET": SubResource("Animation_7ckwx"),
"grow": SubResource("Animation_osp5e"),
"shrink": SubResource("Animation_g5cmy")
}

[node name="Laser" type="Node3D"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
script = ExtResource("1_yhflf")

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -1000)
collision_mask = 5

[node name="Scaler" type="Node3D" parent="."]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)

[node name="sizer3D" type="Node3D" parent="Scaler"]
transform = Transform3D(10, 0, -1.7053e-13, 0, 10, 0, 1.7053e-13, 0, 10, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Scaler/sizer3D"]
transform = Transform3D(0.1, 0, 8.88178e-16, 0, 0.1, 0, -8.88178e-16, 0, 0.1, -4.44089e-16, 0, -0.05)
mesh = SubResource("BoxMesh_h4wgn")
skeleton = NodePath("../..")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p1otm")
}

[node name="GunTail" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_npyr7")
volume_db = -41.143
bus = &"Gun"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
